# Orion-cli

./: .dockerignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  dist-workspace.toml  docker-compose.yml  glama.json  server.json
.github/workflows/: ci.yml  docker-release.yml  release.yml
src/: client.rs  config.rs  main.rs  output.rs  utils.rs
src/commands/: audit_logs.rs  backups.rs  channels.rs  completions.rs  config.rs  connectors.rs  data.rs  engine.rs  functions.rs  health.rs  jobs.rs  mcp.rs  metrics.rs  mod.rs  rules.rs  traces.rs  workflows.rs
src/commands/benchmark/: cleanup.rs  fixtures.rs  mod.rs  report.rs  runner.rs  setup.rs  stats.rs
src/help/: channel_create.txt  completions.txt  connector_create.txt  getting_started.txt  mod.rs  send.txt  workflow_create.txt
src/mcp/: mod.rs
src/mcp/tools/: audit_logs.rs  backups.rs  channels.rs  circuit_breakers.rs  connectors.rs  data.rs  engine.rs  functions.rs  health.rs  metrics.rs  mod.rs  rules.rs  traces.rs  workflows.rs
tests/e2e/: helpers.sh  run.sh
tests/e2e/cases/: 01_ecommerce_classification.json  02_iot_sensor_alerts.json  03_webhook_transformation.json  04_notification_routing.json  05_paused_rules.json  06_compliance_dry_run.json  07_connector_secrets.json  08_http_error_handling.json
tests/e2e/suites/: 01_health.sh  02_rules_crud.sh  02_workflows_crud.sh  03_rules_status.sh  03_workflows_status.sh  04_rules_import_export.sh  04_workflows_import_export.sh  05_rules_test.sh  05_workflows_test.sh  06_connectors_crud.sh  07_data_sync.sh  13_use_cases.sh  (+5 more)
(+39 files in other folders)
